# AstralRaytracer

./: .clang-format  .clang-format.txt  .clang-tidy.txt  .deepsource.toml  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
AstralRaytracerApp/: CMakeLists.txt
AstralRaytracerApp/includes/: Application.h
AstralRaytracerApp/includes/WindowFramework/: Input.h  Window.h
AstralRaytracerApp/includes/WindowFramework/UI/: CommonUI.h  ContentBrowser.h  EnvironmentSettings.h  FileInspector.h  ImageInspect.h  Inspector.h  PostProcessingStack.h  SceneHierarchy.h
AstralRaytracerApp/includes/WindowFramework/UI/FileDialog/: ImGuiFileDialog.h  ImGuiFileDialogConfig.h
AstralRaytracerApp/includes/WindowFramework/UI/ImGuizmo/: GraphEditor.h  ImCurveEdit.h
AstralRaytracerApp/src/: Application.cpp  main.cpp
AstralRaytracerApp/src/WindowFramework/: Input.cpp  Window.cpp  WindowUtils.cpp
AstralRaytracerApp/src/WindowFramework/UI/: CommonUI.cpp  ContentBrowser.cpp  EnvironmentSettings.cpp  FileInspector.cpp  Inspector.cpp  PostProcessingStack.cpp  SceneHierarchy.cpp
AstralRaytracerApp/src/WindowFramework/UI/FileDialog/: ImGuiFileDialog.cpp
AstralRaytracerApp/src/WindowFramework/UI/ImGuizmo/: GraphEditor.cpp  ImCurveEdit.cpp  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
AstralRaytracerCmdTool/: CMakeLists.txt
AstralRaytracerCmdTool/src/: main.cpp
AstralRaytracerLib/: CMakeLists.txt
AstralRaytracerLib/includes/Compositor/: Compositor.h  DrawingPanel.h  RenderTexture.h
AstralRaytracerLib/includes/Compositor/PostProcessing/: AddPostProcess.h  BilateralFilterPostProcess.h  DesaturatePostProcess.h  GammaCorrectionPostProcess.h  HorizontalGaussBlurPostProcess.h  LuminanceThresholdPostProcess.h  NoAlphaPassThroughPostProcess.h  NonLocalMeansPostProcess.h  PostProcessing.h  VerticalGaussBlurPostProcess.h
AstralRaytracerLib/includes/Raytracer/: Camera.h  ColourData.h  DrawingPanel.h  Material.h  ModelManager.h  Ray.h  RenderTexture.h  Renderer.h  Scene.h  ShaderProgram.h  TextureData.h  TextureManager.h  Transform.h
AstralRaytracerLib/includes/Raytracer/PostProcessing/: BilateralFilterPostProcess.h  DesaturatePostProcess.h  GammaCorrectionPostProcess.h  LuminanceThresholdPostProcess.h  PostProcessing.h
AstralRaytracerLib/includes/Raytracer/Renderer/: BaseRenderer.h  DepthRenderer.h  GenericRenderer.h  PBRColorRenderer.h
AstralRaytracerLib/includes/Raytracer/Traceable/: SphereTraceable.h  StaticMesh.h  Traceable.h  TriangleTraceable.h
AstralRaytracerLib/includes/Utils/: AssetManager.h  ColourData.h  Common.h  ModelManager.h  Random.h  Serialization.h  ShaderProgram.h  TextureData.h  TextureManager.h
AstralRaytracerLib/src/Compositor/: Compositor.cpp  DrawingPanel.cpp  RenderTexture.cpp
AstralRaytracerLib/src/Compositor/PostProcessing/: AddPostProcess.cpp  BilateralFilterPostProcess.cpp  DesaturatePostProcess.cpp  GammaCorrectionPostProcess.cpp  HorizontalGaussBlurPostProcess.cpp  LuminanceThresholdPostProcess.cpp  NoAlphaPassThroughPostProcess.cpp  NonLocalMeansPostProcess.cpp  PostProcessing.cpp  VerticalGaussBlurPostProcess.cpp
AstralRaytracerLib/src/Raytracer/: Camera.cpp  DrawingPanel.cpp  Material.cpp  ModelManager.cpp  RenderTexture.cpp  Renderer.cpp  Scene.cpp  ShaderProgram.cpp  TextureData.cpp  TextureManager.cpp  Transform.cpp
AstralRaytracerLib/src/Raytracer/PostProcessing/: BilateralFilterPostProcess.cpp  DesaturatePostProcess.cpp  GammaCorrectionPostProcess.cpp  LuminanceThresholdPostProcess.cpp  PostProcessing.cpp
AstralRaytracerLib/src/Raytracer/Renderer/: BaseRenderer.cpp  DepthRenderer.cpp  GenericRenderer.cpp  PBRColorRenderer.cpp
AstralRaytracerLib/src/Raytracer/Traceable/: SphereTraceable.cpp  StaticMesh.cpp  Traceable.cpp  TriangleTraceable.cpp
AstralRaytracerLib/src/Utils/: AssetManager.cpp  Common.cpp  ModelManager.cpp  Serialization.cpp  ShaderProgram.cpp  TextureData.cpp  TextureManager.cpp
AstralRaytracerTests/: CMakeLists.txt  tests.cpp
AstralRaytracerTests/UtilsTests/: TextureData_Test.h  TextureManager_Test.h
ExampleProject/: defaultProject.asproj
ExampleProject/models/: crystal.gltf  testCube.gltf
ExampleProject/scenes/: scene1.ascene  scene2.ascene
ExampleProject/traceables/: Crystal.astra  Cube.astra  Floor.astra  Sphere1.astra  Sphere2.astra
includes/Raytracer/: Camera.h  ColourData.h  DrawingPanel.h  Material.h  ModelManager.h  Ray.h  Renderer.h  Scene.h  ShaderProgram.h  TextureData.h  TextureManager.h  Transform.h
includes/Raytracer/Traceable/: SphereTraceable.h  StaticMesh.h  Traceable.h  TriangleTraceable.h
includes/Utils/: AssetManager.h  Common.h  ImgInspect.h  Random.h  Serialization.h
includes/WindowFramework/: Input.h  Window.h  WindowUtils.h
includes/WindowFramework/UI/: CommonUI.h  ContentBrowser.h  FileInspector.h  ImageInspect.h
resources/: raytrace.comp  raytrace.comps
resources/materials/: mat1.asmat  mat1.mat  mat2.asmat  mat2.mat
resources/scenes/: scene1.yaml
resources/traceables/: Cube.tble  Floor.tble  Sphere1.tble  Sphere2.astra  Sphere2.tble
src/: main.cpp
src/Raytracer/: Camera.cpp  DrawingPanel.cpp  Material.cpp  ModelManager.cpp  Renderer.cpp  Scene.cpp  ShaderProgram.cpp  TextureData.cpp  TextureManager.cpp  Transform.cpp
src/Raytracer/Traceable/: SphereTraceable.cpp  StaticMesh.cpp  Traceable.cpp  TriangleTraceable.cpp
src/Utils/: AssetManager.cpp  Serialization.cpp
src/WindowFramework/: Input.cpp  Window.cpp  WindowUtils.cpp
src/WindowFramework/UI/: CommonUI.cpp  ContentBrowser.cpp  FileInspector.cpp
